[project]
name = "ivtools"
version = "0.2.9"
description = "Tools for processing IV data acquired from the LabActor environment used at NHMFL."
authors = [{name = "Stefan Marinkovic"}]
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "nptdms",
    "tqdm",
    "MultiPyVu",
    "statsmodels"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
